[package]
name = "fat"
version = "0.1.0"
authors = ["Nicholas Grasevski <grasevski@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
arrayvec = "*"
bitvec = "*"
chrono = { features = ["serde"], version = "*" }
clap = "3.0.0-beta.2"
csv = "*"
humantime = "*"
enum-map = "*"
flate2 = "*"
heapless = "*"
mimalloc = "*"
num-derive = "*"
num-traits = "*"
proptest = "*"
proptest-derive = "*"
rand = "*"
reqwest = { features = ["blocking", "rustls-tls"], version = "*" }
rust_decimal = "*"
serde = { features = ["derive"], version = "*" }
static_assertions = "*"
strum = "*"
strum_macros = "*"
tch = "*"
